--- a/flask/app/templates/includes/footer.html
+++ b/flask/app/templates/includes/footer.html
@@ -4,7 +4,7 @@
       <nav class="pull-left">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://xanland.com">
+            <a class="nav-link" href="http://xanhahn.me/">
               Stonktastic - Xanland
             </a>
           </li>
