--- a/flask/app/templates/includes/sidenav.html
+++ b/flask/app/templates/includes/sidenav.html
@@ -33,13 +33,24 @@
 							</li>
 						<!--
 						===================================
-							Statistics
+							Reports
 						===================================
 						-->
 							<li class="nav-item">
 								<a href="/reports.html">
 									<i class="icon-chart"></i>
-									<p>Reports</p>
+									<p>Project Reports</p>
+								</a>
+							</li>
+						<!--
+						===================================
+							Code Documentation
+						===================================
+						-->
+							<li class="nav-item">
+								<a href="https://aevear.github.io/Stonktastic/">
+									<i class="icon-book-open"></i>
+									<p>Code Documentation</p>
 								</a>
 							</li>
 						<!--
@@ -48,7 +59,7 @@
 						===================================
 						-->
 							<li class="nav-item">
-								<a href="https://www.github.com/aevear">
+								<a href="https://github.com/aevear/Stonktastic">
 									<i class="fab fa-github"></i>
 									<p>Github</p>
 								</a>
@@ -57,14 +68,13 @@
 						===================================
 							Xanland
 						===================================
-						-->
 							<li class="nav-item">
 								<a href="https://www.xanhahn.me">
 									<i class="fab fa-fort-awesome"></i>
 									<p>Xanland</p>
 								</a>
 							</li>
-						<!--
+
 						===================================
 							About
 						===================================
