--- a/flask/app/templates/pages/stock.html
+++ b/flask/app/templates/pages/stock.html
@@ -50,19 +50,19 @@
               <div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
                 <div class="px-2 pb-2 pb-md-0 text-center">
                   <div id="circles-overall"></div>
-                  <h6 class="fw-bold mt-3 mb-0">Overall Accuracy</h6>
+                  <h6 class="fw-bold mt-3 mb-0">Overall R^2 Value</h6>
                 </div>
                 <div class="px-2 pb-2 pb-md-0 text-center">
                   <div id="circles-linreg"></div>
-                  <h6 class="fw-bold mt-3 mb-0">Lin Reg Accuracy</h6>
+                  <h6 class="fw-bold mt-3 mb-0">Lin Reg R^2 Value</h6>
                 </div>
                 <div class="px-2 pb-2 pb-md-0 text-center">
                   <div id="circles-memory"></div>
-                  <h6 class="fw-bold mt-3 mb-0">Memory Accuracy</h6>
+                  <h6 class="fw-bold mt-3 mb-0">Memory R^2 Value</h6>
                 </div>
                 <div class="px-2 pb-2 pb-md-0 text-center">
                   <div id="circles-forest"></div>
-                  <h6 class="fw-bold mt-3 mb-0">Forest Accuracy</h6>
+                  <h6 class="fw-bold mt-3 mb-0">Forest R^2 Value</h6>
                 </div>
               </div>
             </div>
