--- a/flask/app/templates/pages/stock.html
+++ b/flask/app/templates/pages/stock.html
@@ -50,7 +50,7 @@
               <div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
                 <div class="px-2 pb-2 pb-md-0 text-center">
                   <div id="circles-overall"></div>
-                  <h6 class="fw-bold mt-3 mb-0">Overall R^2 Value</h6>
+                  <h6 class="fw-bold mt-3 mb-0">Average R^2 Value</h6>
                 </div>
                 <div class="px-2 pb-2 pb-md-0 text-center">
                   <div id="circles-linreg"></div>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="px-2 pb-2 pb-md-0 text-center">
                   <div id="circles-memory"></div>
-                  <h6 class="fw-bold mt-3 mb-0">Memory R^2 Value</h6>
+                  <h6 class="fw-bold mt-3 mb-0">Memory RMSE Value</h6>
                 </div>
                 <div class="px-2 pb-2 pb-md-0 text-center">
                   <div id="circles-forest"></div>
