--- a/flask/app/templates/pages/dashboard.html
+++ b/flask/app/templates/pages/dashboard.html
@@ -24,7 +24,7 @@
       <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <div class="card-title">SNP 500</div>
+                <div class="card-title">S&P 500</div>
             </div>
             <div class="card-body">
                 <div class="chart-container">
